new proj/src/objects/GE_OG_SS_Win_Loss_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Cycle_Time_Importance_factor_Commertial__c</fullName>
        <inlineHelpText>How is Cycle time important to customer</inlineHelpText>
        <label>Cycle Time Importance factor(Commertial)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SSCustomer_Relationship_Importance__c</fullName>
        <inlineHelpText>How is relationship important to customerfor this opportunity</inlineHelpText>
        <label>Customer Relationship Importance</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Competitor_Advantages__c</fullName>
        <label>Competitor Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Competitor_Disadvantages__c</fullName>
        <label>Competitor Disadvantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Customer_relationship_Comments__c</fullName>
        <label>Customer relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Customer_relationship__c</fullName>
        <inlineHelpText>Primary competitor relationship with customer compared to GE</inlineHelpText>
        <label>Customer relationship</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Cyce_Time__c</fullName>
        <inlineHelpText>Primary competitor cycle time compared to GE</inlineHelpText>
        <label>Cyce Time</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Lead_Platform__c</fullName>
        <label>Lead Platform</label>
        <picklist>
            <picklistValues>
                <fullName>SS- Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS- Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS- Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS- Wellstream</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Market_Trends__c</fullName>
        <label>Market Trends</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Price_Comments__c</fullName>
        <label>Price Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Price_Importance_Factor_Capex__c</fullName>
        <inlineHelpText>How is price important to customer for this opportunity</inlineHelpText>
        <label>Price Importance Factor (Capex)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Product_Solut_Imp_factor_Tech__c</fullName>
        <inlineHelpText>How is product solution  important to customer for this opportunity</inlineHelpText>
        <label>Product Solution Importanc factor(Tech)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Product_Solution_Comments__c</fullName>
        <label>Product Solution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Product_Solution__c</fullName>
        <inlineHelpText>Primary competitor&apos;s capabilty to provide technical solution compared to GE</inlineHelpText>
        <label>Product Solution</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Recommendations_for_leadership__c</fullName>
        <label>Recommendations for leadership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Related_Price__c</fullName>
        <inlineHelpText>Primary competitor&apos;s price related to GE price</inlineHelpText>
        <label>Related Price (%)</label>
        <picklist>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition higher than GE 0-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition higher than GE 11-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition higher than GE more than 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition lower than GE 0-10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition lower than GE 11-25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition lower than GE more than 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Resou_Availa_Importance_Factor__c</fullName>
        <inlineHelpText>How is resource availabilty  important to customerfor this opportunity</inlineHelpText>
        <label>Resource Availabilty Importance Factor</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Resource_Availibilty__c</fullName>
        <inlineHelpText>Primary competitor&apos;s ability to respond to customer request compared to GE</inlineHelpText>
        <label>Resource Availibilty</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Resource_Comments__c</fullName>
        <label>Resource Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Scope_Comments__c</fullName>
        <label>Scope Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Scope_Impotance_Factor_Technica__c</fullName>
        <inlineHelpText>How is Scope (products &amp; services) important to customer for this opportunity</inlineHelpText>
        <label>Scope Importance Factor (Technical)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Scope__c</fullName>
        <inlineHelpText>Primary competitor coverage of product/services scope compared to GE</inlineHelpText>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_T_C_Comments__c</fullName>
        <label>T&amp;C Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_T_C_Importance_Factor__c</fullName>
        <inlineHelpText>How are T&amp;C important to customerfor this opportunity</inlineHelpText>
        <label>T&amp;C Importance Factor</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_T_C__c</fullName>
        <inlineHelpText>Primary competitor T&amp;C compared to GE</inlineHelpText>
        <label>T&amp;C</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Why_do_we_Win_loss__c</fullName>
        <label>Why do we Win/loss</label>
        <type>TextArea</type>
    </fields>
    <label>Win Loss Analysis</label>
    <nameField>
        <label>Win Losss Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Win Loss Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>